springboot.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: springboot-stg
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-stg
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: env # NodePool
                operator: In
                values:
                - medium-2-pool
      containers:
      - name: springboot
        image: revanthacr.azurecr.in/springboot:1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
        ports:
        - name: tomcat-port
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: springboot-stg
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: node-port
  selector:
    app: springboot-stg
