springboot-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-backend-stg
  annotations:
   kubernetes.io/ingress.class: "nginx"
   #kubernetes.io/tls-acme: "true"
   #nginx.ingress.kubernetes.io/rewrite-target: /
   #cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
  - host: springboot.revanthkube.ml  
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot-stg
          servicePort: 8080
